--- a/samconfig.toml
+++ b/samconfig.toml
@@ -3,8 +3,11 @@ version = 0.1
 [default.deploy]
 [default.deploy.parameters]
 stack_name = "sam-app-appv2"
-s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-10q1612tfue3f"
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1r2ycskj80q8i"
 s3_prefix = "sam-app-appv2"
 region = "ap-southeast-2"
+profile = "yiai"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
+parameter_overrides = "Stage=dev BucketName=aiyi.demo.textexact"
+
